--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ body{
 
 .header-2 .left .profile-pic-big img{
     border-radius: 50%;
-    width: 60px;
+    width: 80px;
 }
 
 .header-2 .left{
@@ -124,6 +124,7 @@ body{
 
 .name-big > div {
     font-size: 18px;
+    margin-top: 10px;
 }
 
 
@@ -139,7 +140,7 @@ body{
 }
 
 .header-2 .right button{
-    padding: 8px;
+    padding: 10px 15px;
     background-color: rgb(13, 178, 255);
     border-radius: 15px;
     border-style: none;
@@ -155,8 +156,63 @@ body{
 .main-body{
     grid-area: 2 / 2 / 2 / 2;
     background-color: lightgrey;
+    display: grid;
+    grid-template-columns: 1fr 350px;
+    grid-template-rows: 500px 500px;
+    padding: 30px;
+    gap: 20px;
+}
+
+.projects{
+    display: grid;
+    grid-column-start: 1;
+    grid-row: 1 / 3;
+    grid-template-columns: repeat(auto-fit, 570px);
+    grid-template-rows: repeat(auto-fit, 300px);
+    gap: 30px;
 }
 
 .card{
-    width: 600px;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 15px;
+    padding: 15px;
+    display: grid;
+}
+
+.card > .project-name{
+    font-weight: 800;
+    font-size: 25px;
+}
+
+.card > .buttons{
+    align-self: end;
+    justify-self: end;
+    margin-right: 10px;
+}
+
+.card > .buttons > button{
+    font-size: 20px;
+    padding: 5px;
+    border-style: none;
+    background-color: rgba(1,1,1,0);
+}
+
+.anouncements{
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px 30px;
+    display: grid;
+    align-items: center;
+    background-color: white;
+}
+
+.news > .border{
+    margin-top: 40px;
+    border-bottom: 1px solid black;
+}
+
+.news .title{
+    margin-bottom: 10px;
+    font-weight: 800;
 }
