--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ body{
     background-color: lightgrey;
     display: grid;
     grid-template-columns: 1fr 350px;
-    grid-template-rows: 500px 500px;
+    grid-template-rows: 10px 500px 10px 500px;
     padding: 30px;
     gap: 20px;
 }
@@ -166,9 +166,9 @@ body{
 .projects{
     display: grid;
     grid-column-start: 1;
-    grid-row: 1 / 3;
+    grid-row: 2 / 5;
     grid-template-columns: repeat(auto-fit, 570px);
-    grid-template-rows: repeat(auto-fit, 300px);
+    grid-template-rows: repeat(auto-fit, 320px);
     gap: 30px;
 }
 
@@ -209,6 +209,8 @@ body{
     display: grid;
     align-items: center;
     background-color: white;
+    grid-column-start: 2;
+    grid-row-start: 2;
 }
 
 .news > .border{
@@ -219,4 +221,29 @@ body{
 .news .title{
     margin-bottom: 10px;
     font-weight: 800;
+}
+
+.trending{
+    height: 450px;
+    box-shadow: 0px 3px 5px gray;
+    border-radius: 10px;
+    padding: 10px 50px;
+    display: grid;
+    align-items: center;
+    background-color: white;
+    grid-template: 1fr 1fr 1fr 1fr/ 60px 1fr;
+    align-items: center;
+    justify-items: center;
+    grid-column-start: 2;
+    grid-row-start: 4;
+}
+
+.trend-icon > img{
+    border-radius: 50%;
+    width: 60px;
+}
+
+.section-title{
+    font-size: 20px;
+    font-weight: 600;
 }
